feat: add makefile, add synthwave style, add tool-versions

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -4,27 +4,26 @@
   img {
     filter: invert(1);
 
-    &.ioda { filter: invert(0); }
+    &.ioda {
+      filter: invert(0);
+    }
   }
 }
 
-body[a="dark"] { @include dark-appearance; }
-
+body[a="dark"] {
+  @include dark-appearance;
+}
 
 @media (prefers-color-scheme: dark) {
-  body[a="auto"] { @include dark-appearance; }
+  body[a="auto"] {
+    @include dark-appearance;
+  }
 }
 // -------------------------------------------- //
 
-// bg color is also needed in html in order to
-// block body's background propagation
-// see: https://stackoverflow.com/a/61265706
-html, body { background: white; }
-
-html { height: 100%; }
-
-body {
-  color: black;
+html, body {
+  background: #262335; // Editor background color
+  color: #ffffff; // Foreground color
   font-family: monospace;
   font-size: 16px;
   line-height: 1.4;
@@ -33,17 +32,38 @@ body {
   overflow-wrap: break-word;
 }
 
-.post-meta { text-align: right; }
+.post-meta {
+  text-align: right;
+}
 
-h2, h3, h4, h5, h6 { margin-top: 3rem; }
+h2, h3, h4, h5, h6 {
+  margin-top: 3rem;
+  color: #61e2ff; // Markup heading color
+}
 
-hr { margin: 2rem 0; }
+hr {
+  margin: 2rem 0;
+  text-align: center;
+  border: 0;
+  &:before {
+    content: '/////';
+  }
+  &:after {
+    content: attr(data-content) '/////';
+  }
+}
 
-p { margin: 1rem 0; }
+p {
+  margin: 1rem 0;
+}
 
-li { margin: 0.4rem 0; }
+li {
+  margin: 0.4rem 0;
+}
 
-*:target { background: yellow; }
+*:target {
+  background: #34294f59; // Highlight background
+}
 
 .w {
   max-width: 640px;
@@ -51,25 +71,20 @@ li { margin: 0.4rem 0; }
   padding: 4rem 2rem;
 }
 
-hr {
-  text-align: center;
-  border: 0;
-
-  &:before { content: '/////' }
-  &:after { content: attr(data-content) '/////' }
+table {
+  width: 100%;
+  background: #232530; // Dropdown background
 }
 
-table { width: 100%; }
-
 table, th, td {
-  border: thin solid black;
+  border: thin solid #495495; // EditorGroup border color
   border-collapse: collapse;
   padding: 0.4rem;
 }
 
 code {
-  color: white;
-  background: black;
+  color: #ffffff;
+  background: #2a2139;
 }
 
 div.highlighter-rouge code {
@@ -77,14 +92,14 @@ div.highlighter-rouge code {
   overflow-x: auto;
   white-space: pre-wrap;
   padding: 1rem;
+  background: #232530;
 }
 
 blockquote {
   font-style: italic;
-  border: thin solid black;
+  border: thin solid #8a2dc0;
   padding: 1rem;
-
-  p { margin: 0; }
+  color: #b6b1b1;
 }
 
 img {
