fix: remove filter color inversion

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,11 +1,6 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
-  filter: invert(1);
-  img {
-    filter: invert(1);
-
-    &.ioda { filter: invert(0); }
-  }
+  background: #191a22;
 }
 
 body[a="dark"] { @include dark-appearance; }
@@ -24,7 +19,6 @@ html, body { background: white; }
 html { height: 100%; }
 
 body {
-  color: #191a22;
   font-family: monospace;
   font-size: 16px;
   line-height: 1.4;
