--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -3,6 +3,7 @@
   background: #191a22;
   p { color: #b8c3f1}
   a { color: #b1e5fd }
+  ul, li { color: #b1e5fd }
 }
 
 body[a="dark"] { @include dark-appearance; }
