--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -4,11 +4,9 @@
   p { color: #b8c3f1}
   a { color: #b1e5fd }
   ul, li { color: #b8c3f1 }
-  background: linear-gradient(
-      rgba(42, 33, 57, 0.8),
-      rgba(42, 33, 57, 0.8)
-    ),
-    url('https://via.placeholder.com/1920x1080') no-repeat center center fixed;
+  background:
+    linear-gradient(rgba(42, 33, 57, 0.9),rgba(42, 33, 57, 0.89)),
+    url('bg.png') no-repeat center center fixed;
 background-size: cover;
 }
 
