--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -6,7 +6,7 @@
   ul, li { color: #b8c3f1 }
   background:
     linear-gradient(rgba(42, 33, 57, 0.7),rgba(42, 33, 57, 0.7)),
-    url('{{ site.baseurl }}/assets/images/bg.png') no-repeat center center fixed;
+    url('/assets/images/bg.png') no-repeat center center fixed;
 background-size: cover;
 }
 
