--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -5,7 +5,7 @@
   a { color: #b1e5fd }
   ul, li { color: #b8c3f1 }
   background:
-    linear-gradient(rgba(25, 26, 34, 0.98),rgba(25, 26, 34, 0.98)),
+    linear-gradient(rgba(25, 26, 34, 0.98),rgba(25, 26, 34)),
     url('/assets/images/bg.png') no-repeat center center fixed;
 background-size: cover;
 }
