feat: gradient adjustments

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -6,7 +6,7 @@
   ul, li { color: #b8c3f1 }
   background:
   linear-gradient(
-    to bottom,
+    to top,
     rgba(91, 94, 119, 0.7) 50%,
     rgba(25, 26, 34) 50%
   ),
