--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -7,8 +7,8 @@
   background:
   linear-gradient(
     to top,
-    rgba(25, 26, 34, 0.7) 70%,
-    rgba(25, 26, 34) 30%
+    rgba(28, 3, 47, 0.8) 60%,
+    rgba(183, 13, 122, 0.95) 40%
   ),
     url('/assets/images/bg.png') no-repeat center center fixed;
 background-size: cover;
