feat: gradient adjustments

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -7,9 +7,9 @@
   background:
   linear-gradient(
     to top,
-    rgba(25, 26, 34, 0.8) 40%,
+    rgba(38, 3, 47, 0.8)) 40%,
     rgba(34, 25, 32, 0.8) 50%,
-    rgba(25, 26, 34, 0.95) 60%
+    rgb(25, 26, 34) 60%
   ),
     url('/assets/images/bg.png') no-repeat center center fixed;
 background-size: cover;
