--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -7,7 +7,7 @@
   background:
   linear-gradient(
     to top,
-    rgba(38, 3, 47, 0.8)) 40%,
+    rgba(25, 26, 34, 0.8) 40%,
     rgba(34, 25, 32, 0.8) 50%,
     rgb(25, 26, 34) 60%
   ),
