feat: gradient adjustments

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -7,7 +7,7 @@
   background:
   linear-gradient(
     to top,
-    rgba(34, 25, 34, 0.8) 60%,
+    rgb(34, 25, 34) 60%,
     rgb(25, 26, 34) 40%
   ),
     url('/assets/images/bg.png') no-repeat center center fixed;
