--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -7,7 +7,8 @@
   background:
   linear-gradient(
     to top,
-    rgb(34, 25, 34) 60%,
+    rgba(34, 25, 34) 10%,
+    rgba(25, 26, 34) 30%,
     rgb(25, 26, 34) 40%
   ),
     url('/assets/images/bg.png') no-repeat center center fixed;
