--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,16 +1,21 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
-  background:
-    linear-gradient(
-      to top,
-      rgba(25, 26, 34, 1) 100%
-    ),
-    url('/assets/images/bg.png') no-repeat center center fixed;
+  background: #191a22;
   background-size: cover;
 
-  p { color: #b8c3f1; }
-  a { color: #b1e5fd; }
-  ul, li { color: #b8c3f1; }
+  p { color: #b8c3f1}
+  a { color: #b1e5fd }
+  ul, li { color: #b8c3f1 }
+
+  background:
+  linear-gradient(
+    to top,
+    rgba(34, 25, 34) 20%,
+    rgba(25, 26, 34) 30%,
+    rgb(25, 26, 34) 50%
+  ),
+    url('/assets/images/bg.png') no-repeat center center fixed;
+  
 }
 
 body[a="dark"] { @include dark-appearance; }
