fix: glow effect

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -3,9 +3,9 @@
   background: #191a22;
   background-size: cover;
 
-  p { color: #b8c3f1}
-  a { color: #b1e5fd }
-  ul, li { color: #b8c3f1 }
+  p { color: #b8c3f1};
+  a { color: #b1e5fd };
+  ul, li { color: #b8c3f1 };
 
   background:
   linear-gradient(
