feat: disable glow

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -117,7 +117,7 @@ img {
 
 h1 {
   color: #fe6b75;
-  animation: glow 1.5s ease-in-out infinite alternate;
+  // animation: glow 1.5s ease-in-out infinite alternate;
 }
 h2 { color: #dba663; }
 h3 { color: #6c8e50; }
