--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 
 <article>
   <p class="post-meta">
-    <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
+    <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format | strip }}</time>
   </p>
   
   <h1>{{ page.title }}</h1>
