feat: add bg synthwave

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -9,13 +9,8 @@
 
   & {
     background:
-      linear-gradient(
-        to top,
-        rgb(34, 25, 34) 20%,
-        rgb(25, 26, 34) 30%,
-        rgb(25, 26, 34) 50%
-      ),
-      url('/assets/images/bg.png') no-repeat center center fixed;
+      linear-gradient(rgba(255, 255, 255, 0)),
+      url('/assets/images/bg.jpg') no-repeat center center fixed;
   }
 }
 
