--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -8,9 +8,7 @@
   ul, li { color: #b8c3f1; }
 
   & {
-    background:
-      linear-gradient(rgba(255, 255, 255, 0)),
-      url('/assets/images/bg.jpg') no-repeat center center fixed;
+    background: url('/assets/images/bg.jpg') no-repeat center center fixed;
   }
 }
 
