--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -8,7 +8,7 @@
   ul, li { color: #b8c3f1; }
 
   & {
-    background: url('/assets/images/bg.jpg') no-repeat center center fixed;
+    background: url('/assets/images/bg.jpg') no-repeat center center fixed cover;
   }
 }
 
