--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,14 +1,14 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   background: #191a22;
-  background-size: cover;
 
   p { color: #b8c3f1; }
   a { color: #b1e5fd; }
   ul, li { color: #b8c3f1; }
 
   & {
-    background: url('/assets/images/bg.jpg') no-repeat center center fixed cover;
+    background: url('/assets/images/bg.jpg') no-repeat center center fixed;
+    background-size: cover;
   }
 }
 
