feat: change main bg color

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,6 +1,6 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
-  background: #191a22;
+  background: #220C35;
 
   p { color: #b8c3f1; }
   a { color: #b1e5fd; }
