feat: add two theme styles and theme_config.style option between hacker and synthwave

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,10 @@
 ---
 ---
 
-@import "no-style-please";
+@import "minimalist-please";
+
+{% if site.theme_config.style == 'hacker' %}
+  @import "minimalist-hacker";
+{% else %}
+  @import "minimalist-synthwave";
+{% endif %}
